--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Untitled</title>
+    <title>index</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700">
     <link rel="stylesheet" href="assets/css/Google-Style-Login.css">
@@ -13,7 +13,7 @@
 </head>
 
 <body><img src="assets/img/Gipay.png" style="height: 130px;margin-bottom: -860px;margin-left: 250px;">
-    <div class="login-card" style="margin-right: 250px;margin-top: 230px;"><img class="profile-img-card" src="assets/img/Logo.png" style="height: 115px;width: 100px;">
+    <div class="login-card" style="margin-right: 250px;margin-top: 200px;"><img class="profile-img-card" src="assets/img/Logo.png" style="height: 115px;width: 100px;">
         <p class="profile-name-card"> </p>
         <form class="form-signin"><span class="reauth-email"> </span><input class="form-control" type="email" id="inputEmail" required="" placeholder="Username" autofocus=""><input class="form-control" type="password" id="inputPassword" required="" placeholder="Password">
             <div
