--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="background-color: #c4e0f4;">
+<html style="background-color: #eef4f7;">
 
 <head>
     <meta charset="utf-8">
@@ -9,17 +9,18 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700">
     <link rel="stylesheet" href="assets/css/Google-Style-Login.css">
     <link rel="stylesheet" href="assets/css/Header-Blue.css">
+    <link rel="stylesheet" href="assets/css/Pretty-Registration-Form.css">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/Team-Boxed.css">
 </head>
 
-<body style="background-color: rgb(196,224,244);">
+<body style="background-color: rgb(238,244,247);">
     <div></div>
-    <div style="margin-top: 150px;background-color: #c4e0f4;">
+    <div style="margin-top: 150px;background-color: #eef4f7;">
         <div class="container">
             <div class="row">
-                <div class="col-md-6" style="background-color: #c4e0f4;"><img src="assets/img/Gipay.png" style="height: 115px;"></div>
-                <div class="col-md-6" style="background-color: #c4e0f4;">
+                <div class="col-md-6" style="background-color: #eef4f7;"><img src="assets/img/Gipay.png" style="height: 115px;"></div>
+                <div class="col-md-6" style="background-color: #eef4f7;">
                     <div class="login-card"><img class="profile-img-card" src="assets/img/Logo.png" style="height: 115px;width: 100px;">
                         <p class="profile-name-card"> </p>
                         <form class="form-signin"><span class="reauth-email"> </span><input class="form-control" type="email" id="inputUsername" required="" placeholder="Username" autofocus=""><input class="form-control" type="password" id="inputPassword" required="" placeholder="Password">
