--- a/signup.html
+++ b/signup.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700">
     <link rel="stylesheet" href="assets/css/Google-Style-Login.css">
     <link rel="stylesheet" href="assets/css/Header-Blue.css">
+    <link rel="stylesheet" href="assets/css/Pretty-Registration-Form.css">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/Team-Boxed.css">
 </head>
@@ -41,7 +42,7 @@
                 <div class="col-md-6 col-lg-4 item">
                     <div class="box" style="height: 480px;"><img class="rounded-circle" src="assets/img/Toko.png">
                         <h3 class="name">Pemilik Toko</h3>
-                        <p class="description" style="margin-top: 43px;">Pemilik Toko akan dimudahkan dalam mengelola statistik dari transaksi yang dilakukan.</p><button class="btn btn-primary" type="button" style="font-size: 20px;">Register</button></div>
+                        <p class="description" style="margin-top: 43px;">Pemilik Toko akan dimudahkan dalam mengelola statistik dari transaksi yang dilakukan.</p><a href="regToko.html" class="btn btn-primary" type="button" style="font-size: 20px;">Register</a></div>
                 </div>
                 <div class="col-md-6 col-lg-4 item">
                     <div class="box" style="height: 480px;"><img class="rounded-circle" src="assets/img/Orang.png">
