Update Pemilik Pribadi

--- a/regPribadi.html
+++ b/regPribadi.html
@@ -29,13 +29,13 @@
     <div>
         <div class="container">
             <div class="row">
-                <div class="col-md-12"><img class="regToko" src="assets/img/Toko.png" style="height: 250px;" /></div>
+                <div class="col-md-12"><img class="regToko" src="assets/img/Orang.png" style="height: 250px;" /></div>
             </div>
         </div>
     </div>
     <div class="row register-form"><div class="col-md-8 offset-md-2" style="margin-top: -75px;">
     <form class="custom-form" style="opacity: 1;">
-        <h1>Pemilik Toko</h1>
+        <h1>Pengguna Pribadi</h1>
         <div class="form-row form-group">
             <div class="col-sm-4 label-column"><label class="col-form-label" for="name-input-field">Username</label></div>
             <div class="col-sm-6 input-column"><input class="form-control" type="text" required/></div>
@@ -47,14 +47,6 @@
         <div class="form-row form-group">
             <div class="col-sm-4 label-column"><label class="col-form-label" for="namaLengkap-input-field">Nama Lengkap</label></div>
             <div class="col-sm-6 input-column"><input type="text" required class="form-control" /></div>
-        </div>
-        <div class="form-row form-group">
-            <div class="col-sm-4 label-column"><label class="col-form-label" for="namaToko-input-field">Nama Toko</label></div>
-            <div class="col-sm-6 input-column"><input class="form-control" type="text" required /></div>
-        </div>
-        <div class="form-row form-group">
-            <div class="col-sm-4 label-column"><label class="col-form-label" for="alamatToko-input-field">Alamat Toko</label></div>
-            <div class="col-sm-6 input-column"><input class="form-control" type="text" required /></div>
         </div>
         <div class="form-row form-group">
             <div class="col-sm-4 label-column"><label class="col-form-label" for="noHP-input-field">No HP</label></div>
