--- a/signup.html
+++ b/signup.html
@@ -30,7 +30,7 @@
     <div class="team-boxed">
         <div class="container">
             <div class="intro">
-                <h2 class="text-center">Gi-Pay</h2><p class="text-center" style="">BAYAR INI ITU, GI-PAYIN AJA.<br />Gi-Pay bikin #dirumahaja jadi aman, produktif, dan menyenangkan!</p></div>
+                <h2 class="text-center">Gi-Pay</h2><p class="text-center">BAYAR INI ITU, GI-PAYIN AJA.<br />Gi-Pay bikin #dirumahaja jadi aman, produktif, dan menyenangkan!</p></div>
             <div class="row people">
                 <div class="col-md-6 col-lg-4 item">
                     <div class="box" style="height: 480px;"><img class="rounded-circle" src="assets/img/Logo.png" style="height: 160px;">
@@ -42,7 +42,7 @@
                 <div class="col-md-6 col-lg-4 item">
                     <div class="box" style="height: 480px;"><img class="rounded-circle" src="assets/img/Toko.png">
                         <h3 class="name">Pemilik Toko</h3>
-                        <p class="description" style="margin-top: 43px;">Pemilik Toko akan dimudahkan dalam mengelola statistik dari transaksi yang dilakukan.</p><a href="regToko.html" class="btn btn-primary" type="button" style="font-size: 20px;">Register</a></div>
+                        <p class="description" style="margin-top: 43px;">Pemilik Toko akan dimudahkan dalam mengelola statistik dari transaksi yang dilakukan.</p><a href="regToko.php" class="btn btn-primary" type="button" style="font-size: 20px;">Register</a></div>
                 </div>
                 <div class="col-md-6 col-lg-4 item">
                     <div class="box" style="height: 480px;"><img class="rounded-circle" src="assets/img/Orang.png">
