--- a/signup.html
+++ b/signup.html
@@ -25,7 +25,7 @@
                     <li class="nav-item" role="presentation"></li>
                     <li class="nav-item" role="presentation"></li>
                 </ul>
-            </div><a href="index.html" class="btn btn-primary" role="button">Sign In</a></div>
+            </div><a href="index.php" class="btn btn-primary" role="button">Sign In</a></div>
     </nav>
     <div class="team-boxed">
         <div class="container">
