Add function regPribadi + session values

--- a/signup.html
+++ b/signup.html
@@ -47,7 +47,7 @@
                 <div class="col-md-6 col-lg-4 item">
                     <div class="box" style="height: 480px;"><img class="rounded-circle" src="assets/img/Orang.png">
                         <h3 class="name">Pemilik Pribadi</h3>
-                        <p class="description" style="margin-top: 44px;">Pemilik Pribadi akan dimudahkan dalam melakukan transaksi, karena Gi-Pay memberi kemudahan dalam segala hal.</p><a href="regPribadi.html" class="btn btn-primary" type="button" style="font-size: 20px;">Register</a></div>
+                        <p class="description" style="margin-top: 44px;">Pemilik Pribadi akan dimudahkan dalam melakukan transaksi, karena Gi-Pay memberi kemudahan dalam segala hal.</p><a href="regPribadi.php" class="btn btn-primary" type="button" style="font-size: 20px;">Register</a></div>
                 </div>
             </div>
         </div>
