--- a/histopPub.html
+++ b/histopPub.html
@@ -11,11 +11,16 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Muli">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700">
-    <link rel="stylesheet" href="assets/css/Google-Style-Login.css">
+    <link rel="stylesheet" href="assets/css/Data-Table-1.css">
+    <link rel="stylesheet" href="assets/css/Data-Table.css">
     <link rel="stylesheet" href="assets/css/Header-Blue.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.15/css/dataTables.bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/Google-Style-Login.css">
     <link rel="stylesheet" href="assets/css/LinkedIn-like-Profile-Box.css">
     <link rel="stylesheet" href="assets/css/Pretty-Registration-Form.css">
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/Table-With-Search-1.css">
+    <link rel="stylesheet" href="assets/css/Table-With-Search.css">
     <link rel="stylesheet" href="assets/css/Team-Boxed.css">
 </head>
 
@@ -29,7 +34,7 @@
                     <li class="nav-item" role="presentation"></li>
                     <li class="nav-item" role="presentation"></li>
                 </ul>
-            </div><input class="form-control-plaintext" type="text" value="Welcome, dioantares" readonly="" style="width: 205px;font-size: 18px;"><a href="index.php" class="btn btn-primary" role="button">Sign Out</a></div>
+            </div><input class="form-control-plaintext" type="text" value="Welcome, dioantares" readonly="" style="width: 205px;font-size: 18px;"><a href="index.html" class="btn btn-primary" role="button">Sign Out</a></div>
     </nav>
     <nav class="navbar navbar-light navbar-expand-md">
         <div class="container-fluid"><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-2"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
@@ -42,8 +47,32 @@
                     style="color: rgb(0,0,0);width: 160px;">History Payment</a><a href="histopPub.html" style="color: rgb(0,0,0);">History TopUp</a></div>
         </div>
     </nav>
+    <div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12" style="height: 40px;background-color: #ffffff;"></div>
+            </div>
+        </div>
+    </div><table id="example" class="table table-striped table-bordered" cellspacing="0" width="100px">
+        <thead>
+            <tr>
+                <th style="text-align:center;">idTopUp</th>
+                <th style="text-align:center;">Jumlah Top Up</th>
+                <th style="text-align:center;">Tanggal</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>dioantares</td>
+                <td>200.000</td>
+                <td>6-5-202</td>
+        </tbody>
+    </table>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.15/js/dataTables.bootstrap.min.js"></script>
+    <script src="assets/js/Table-With-Search.js"></script>
 </body>
 
 </html>
